updated new feature